// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`orderService should return the users of the last hour 1`] = `
[
  User {
    "address": {
      "city": "New York",
      "street": "123 Main St",
      "zipCode": "12345",
    },
    "dateOfBirth": 1990-01-15T00:00:00.000Z,
    "email": "john@example.com",
    "firstName": "John",
    "id": 1,
    "isActive": true,
    "lastName": "Doe",
    "phoneNumber": "123-456-7890",
    "roles": [
      "user",
      "admin",
    ],
    "userName": "john_doe",
  },
  User {
    "address": {
      "city": "New York",
      "street": "123 Main St",
      "zipCode": "12345",
    },
    "dateOfBirth": 1990-01-15T00:00:00.000Z,
    "email": "john@example.com",
    "firstName": "John",
    "id": 1,
    "isActive": true,
    "lastName": "Doe",
    "phoneNumber": "123-456-7890",
    "roles": [
      "user",
      "admin",
    ],
    "userName": "john_doe",
  },
  User {
    "address": {
      "city": "New York",
      "street": "123 Main St",
      "zipCode": "12345",
    },
    "dateOfBirth": 1990-01-15T00:00:00.000Z,
    "email": "john@example.com",
    "firstName": "John",
    "id": 1,
    "isActive": true,
    "lastName": "Doe",
    "phoneNumber": "123-456-7890",
    "roles": [
      "user",
      "admin",
    ],
    "userName": "john_doe",
  },
  User {
    "address": {
      "city": "New York",
      "street": "123 Main St",
      "zipCode": "12345",
    },
    "dateOfBirth": 1990-01-15T00:00:00.000Z,
    "email": "john@example.com",
    "firstName": "John",
    "id": 1,
    "isActive": true,
    "lastName": "Doe",
    "phoneNumber": "123-456-7890",
    "roles": [
      "user",
      "admin",
    ],
    "userName": "john_doe",
  },
]
`;

exports[`orderService should return the users of the last hour 2`] = `
[MockFunction] {
  "calls": [
    [
      1,
    ],
    [
      2,
    ],
    [
      3,
    ],
    [
      4,
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": User {
        "address": {
          "city": "New York",
          "street": "123 Main St",
          "zipCode": "12345",
        },
        "dateOfBirth": 1990-01-15T00:00:00.000Z,
        "email": "john@example.com",
        "firstName": "John",
        "id": 1,
        "isActive": true,
        "lastName": "Doe",
        "phoneNumber": "123-456-7890",
        "roles": [
          "user",
          "admin",
        ],
        "userName": "john_doe",
      },
    },
    {
      "type": "return",
      "value": User {
        "address": {
          "city": "New York",
          "street": "123 Main St",
          "zipCode": "12345",
        },
        "dateOfBirth": 1990-01-15T00:00:00.000Z,
        "email": "john@example.com",
        "firstName": "John",
        "id": 1,
        "isActive": true,
        "lastName": "Doe",
        "phoneNumber": "123-456-7890",
        "roles": [
          "user",
          "admin",
        ],
        "userName": "john_doe",
      },
    },
    {
      "type": "return",
      "value": User {
        "address": {
          "city": "New York",
          "street": "123 Main St",
          "zipCode": "12345",
        },
        "dateOfBirth": 1990-01-15T00:00:00.000Z,
        "email": "john@example.com",
        "firstName": "John",
        "id": 1,
        "isActive": true,
        "lastName": "Doe",
        "phoneNumber": "123-456-7890",
        "roles": [
          "user",
          "admin",
        ],
        "userName": "john_doe",
      },
    },
    {
      "type": "return",
      "value": User {
        "address": {
          "city": "New York",
          "street": "123 Main St",
          "zipCode": "12345",
        },
        "dateOfBirth": 1990-01-15T00:00:00.000Z,
        "email": "john@example.com",
        "firstName": "John",
        "id": 1,
        "isActive": true,
        "lastName": "Doe",
        "phoneNumber": "123-456-7890",
        "roles": [
          "user",
          "admin",
        ],
        "userName": "john_doe",
      },
    },
  ],
}
`;
